# Hydrion-Tool

./: .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: art.cpp.D70CE33F023AFC8A.idx  art.hpp.312E648D42152738.idx  main.cpp.715CA6B4B27053E4.idx
.github/workflows/: build.yml
docker/: Dockerfile
include/: art.h  art.hpp  commands.h  commands.hpp  deviceinfo.h  iplookup.h  stats.h  token.h  webhook.h
include/commands/: webhook.hpp
scripts/: dev.sh  setup-liux.sh  setup-macos.sh  setup-termux.sh  setup-windows.bat  setup-windows.ps1
src/: art.cpp  commands.cpp  deviceinfo.cpp  iplookup.cpp  main.cpp  stats.cpp  token.cpp  updater.cpp  webhook.cpp
src/commands/: webhook.cpp
